--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -30,7 +30,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
-Chemotion assists in experiment design and planning research by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from *databases*.
+Chemotion assists in experiment design and planning research by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from relevant *databases*.
 
 [Find out more](/docs/chemotion_eln_experimentDesign)
 
@@ -38,7 +38,7 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
-During experiments Chemotion supports with *automated calculations*, *structured documentation*, and a *concise overview* of experimental information.
+During experiments, Chemotion supports researchers with *automated calculations*, *structured documentation*, and a *concise overview* of experimental information.
 
 [Find out more](/docs/chemotion_eln_experimemt)
 
@@ -48,7 +48,7 @@ During experiments Chemotion supports with *automated calculations*, *structured
 
 For seamless workflows, *analytical devices* can be connected and directly accessed within the Chemotion ELN.
 
-Besides the connection of analytical devices to the Chemotion ELN, data of these devices can be automatically transferred, file formats converted, and metadata mapped.
+Besides the connection of analytical devices to the Chemotion ELN, data from these devices can be automatically transferred, file formats are converted, and metadata is mapped.
 
 
 [Find out more](/docs/chemotion_eln_datacollection)
@@ -67,7 +67,7 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
-The Chemotion ELN is connected to several *data repositories* which allows for simple and fast publication of research data.
+The Chemotion ELN is connected to several *data repositories*. Incorperated publishing workflows allow for simple and fast publication of research data.
 
 [Find out more](/docs/chemotion_eln_datapublication)
 
@@ -78,6 +78,8 @@ The Chemotion ELN is connected to several *data repositories* which allows for s
 ## LabIMotion
 
 In addition to its primary focus on chemistry, the ELN is also utilized in various other disciplines due to its versatile functionality that caters to the needs of scientists operating in interdisciplinary environments. These generic elements are continually being refined and adapted. The latest extension, introduced in November 2023, is [LabIMotion](https://www.chemotion.net/docs/labimotion), which enables users to incorporate entirely non-chemical functionalities by designing new modules.
+
+
 
 ## Chemotion Introductory Video
 
