--- a/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_analysis.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_analysis.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Data Analysis"
-slug: "/chemotion_eln_datanalysis"
-id: "chemotion_eln_datanalysis"
+title: "Analysis"
+slug: "/chemotion_eln_analysis"
+id: "chemotion_eln_analysis"
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Chemotion: Data Analysis
+# Chemotion: Analysis
 
 <img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
 
